--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but qxlp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong></strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    
   </body>
 </html>
